css/custom.css
/*! Place your custom styles here */
.btn {
    font-family: 'Montserrat', sans-serif;
}

h1,h3,h4 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    font-style: normal
}

.background-info,.example {
    font-family: 'Lora', serif;
    font-style: italic;
}

h3,h4 {
    color: #fff;
}

footer {
    background: #2C2C2C;
    color: #fff;
}

.bg-1 {
    background: #3B3561;
    color: #fff;
}
.bg-1 h1 {
    color: #fff;
}
.bg-1 p {
    color: #fff;
}

.bg-2 {
    background: #9055A2;
    color: #fff;
}
.bg-2 h1 {
    color: #fff;
}
.bg-2 p {
    color: #fff;
}

.bg-3 {
    background: #6BF091;
    color: #333;
}

.bg-4 {
    background: #EAEAEA;
    color: #333;
}

.bg-1,.bg-2, .bg-3, .bg-4  {
    min-width: 100%;
    margin: 0;
    left: 0;
}

.bg-1 p, .bg-2 p, .bg-3 p, .bg-4 p {
    font-family: OpenSans;
    font-size: 18px;
    letter-spacing: 0;
}
.bg-3 h3, .bg-4 h3  {
    color: #333;
}

.bg-1 h3, .bg-2 h3, .bg-3 h3, .bg-4 h3 {
    margin-bottom: 0px;
}

article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
    display: block;
}

*, ::after, ::before {
    box-sizing: border-box;
}

.align-items-center {
    -ms-flex-align: center!important;
    align-items: center!important;
}

.img-fluid {
    max-width: 100%;
    height: auto;
}
img {
    vertical-align: middle;
    border-style: none;
}

img.principle-img {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.above-fold {
    padding-bottom: 7.42857143em 
}

.foot-label {
    font-family: 'Montserrat', sans-serif;
    font-size: 12px;
    font-weight: 100;
    color: #FFFFFF;
    letter-spacing: 2.4px;
    text-transform: uppercase;
    clear: both;

}

.foot-icons i {
    color: #6BF091;
    position: relative;
}

a.principle {
    display: block;
    text-decoration: none;
    color: inherit;
}

input.foot-input {
    background: #353535;
    font-family: OpenSans;
    font-size: 14px;
    color: #6C6C6C;
    letter-spacing: 0;
    line-height: 26px;
    border: none;
}

.foot-logo {
    text-align: center;
    max-height: 1.85714286em;
    max-width: none;
    margin-bottom: 1.04em!important;

}

.no-padding-bottom {
  padding-bottom: 0!important;
}

.no-padding-top {
  padding-bottom: 0!important;
}

footer hr {
    height: 1px;
    background:#797979;
    min-width: 100%;
    opacity: 0.1;

}

p.type--fine-print {
    font-family: OpenSans;
    font-size: 12px;
    color: #797979!important;
    letter-spacing: 0;
    line-height: 22px;
}

.p-5 {
    padding: 3rem!important;
}

.why {
    font-size: 20px;
}

p {
    font-size: 16px;
}

@media (min-width: 992px)
.order-lg-2 {
    -ms-flex-order: 2;
    order: 2;
}
@media (min-width: 992px)
.col-lg-6 {
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
}

.align-items-center {
    -ms-flex-align: center!important;
    align-items: center!important;
}

.row {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-right: -15px;
    margin-left: -15px;
}

h1.principle {
    font-size: 2.5em;
    margin-top: 0.83em;
}

.quote-card {
    background: white;
    color: #222222;
    padding: 20px;
    box-sizing: border-box;
    border-top: 1px #333;
    border-bottom: 1px #333;
    position: relative;
    overflow: hidden;
    min-height: 120px;
    margin-top: 40px;
    margin-bottom: 40px;
}

.border-bg1 {
    border-top: solid 1px #333;
    border-bottom: solid 1px #333;
}

.quote-card p {
 line-height: 1.5;
 margin: 0;
 text-align: center;
 font-family: Lora-Regular;
 font-weight: 100;
 color: #000000;
 letter-spacing: 0.55px;
}

p.background-info {
    font-size: 0.8em;
}

@media (max-width: 767px) { 
    .img-fluid {
        max-width: 80%;
    }

    .img-fluid.magic-hat {
        margin-top:1.5em;
        margin-left: 10%;
        width: 60%;
    }

    .above-fold {
        padding-bottom: 1.5em;
        padding-top: 1.5em;
        text-align: center;
    }

    h1 + .btn, .h1 + .btn {
    margin-top: 0.5em;
}

    .above-fold h1, .above-fold .btn {
    margin-top: 0
    width:80%;
    }

    .p-5 {
    padding: 0.5em!important;
    margin-top: 1.2em!important;
    text-align: center;
    width: 80%;
    margin: auto;
    }

    .bg-1 p, .bg-2 p, .bg-3 p, .bg-4 p {
    font-size: 1em;
    letter-spacing: 0;
    line-height: normal;
    padding-bottom: 1.2em;
    }

}

